# galinette

./: CMakeLists.txt
galinette-cli/: CMakeLists.txt
galinette-gtk/: CMakeLists.txt  callbacks.c  callbacks.h  galinette-gtk.c  galinette_gtk.glade  galinette_gtk.ui  hal.c  main.c  monitor.c  monitor.h
libgalinette/: CMakeLists.txt
